[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-auth"
version = "0.1.0"
description = "Switch and manage SSH profiles for Codex remote development"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "fourhet66-ctrl" }]
keywords = ["ssh", "codex", "remote-development", "developer-tools", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/fourhet66-ctrl/SSH-Auth"
Repository = "https://github.com/fourhet66-ctrl/SSH-Auth"
Issues = "https://github.com/fourhet66-ctrl/SSH-Auth/issues"

[project.scripts]
ssh-auth = "ssh_auth.cli:main"

[tool.setuptools]
packages = ["ssh_auth"]
license-files = ["LICENSE"]
